Add required in radio button

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <%= form_with url: "/home/save_answer" do |f| %>
   <div>
     <h3> Q1: DELIVER THROUGH OTHERS </h3>
-    <%= f.radio_button :Q1, "A", autocomplete:"off" , class:"btn-check"%>
+    <%= f.radio_button :Q1, "A", autocomplete:"off" , class:"btn-check", required:true %>
     <%= f.label :Q1_A,"A. NOT EFFECTIVE", class:"btn btn-outline-success", onclick: "clickAnswer('Q1','a')" %>
     <%= f.radio_button :Q1, "B", autocomplete:"off", class:"btn-check" %>
     <%= f.label :Q1_B,"B. NEITHER INEFFECTIVE OR EFFECTIVE", class:"btn btn-outline-success", onclick: "clickAnswer('Q1','b')" %>
@@ -14,7 +14,7 @@
   </br>
   <div>
     <h3> Q2: UNDERSTAND OTHERS PERSPECTIVES </h3>
-    <%= f.radio_button :Q2, "A", autocomplete:"off" , class:"btn-check" %>
+    <%= f.radio_button :Q2, "A", autocomplete:"off" , class:"btn-check", required:true %>
     <%= f.label :Q2_A,"A. NOT EFFECTIVE", class:"btn btn-outline-success", onclick: "clickAnswer('Q2','a')" %>
     <%= f.radio_button :Q2, "B", autocomplete:"off", class:"btn-check" %>
     <%= f.label :Q2_B,"B. NEITHER INEFFECTIVE OR EFFECTIVE", class:"btn btn-outline-success", onclick: "clickAnswer('Q2','b')" %>
@@ -24,7 +24,7 @@
   </br>
   <div>
     <h3> Q3: SOLVE COMPLEX PROBLEMS  </h3>
-    <%= f.radio_button :Q3, "A", autocomplete:"off" , class:"btn-check" %>
+    <%= f.radio_button :Q3, "A", autocomplete:"off" , class:"btn-check", required:true %>
     <%= f.label :Q3_A,"A. NOT EFFECTIVE", class:"btn btn-outline-success", onclick: "clickAnswer('Q3','a')" %>
     <%= f.radio_button :Q3, "B", autocomplete:"off", class:"btn-check" %>
     <%= f.label :Q3_B,"B. NEITHER INEFFECTIVE OR EFFECTIVE", class:"btn btn-outline-success", onclick: "clickAnswer('Q3','b')" %>
