--- a/app/views/home/show_answer.html.erb
+++ b/app/views/home/show_answer.html.erb
@@ -1,5 +1,5 @@
 </br>
 <h1>Here's Your Answer!</h1>
-<h3> Q1 = <%= @Answers.Q1 %> </h3>
-<h3> Q2 = <%= @Answers.Q2 %> </h3>
-<h3> Q3 = <%= @Answers.Q3 %> </h3>
+<h3> Q1 = <%= @Question_And_Answer["Q1"] %> </h3>
+<h3> Q2 = <%= @Question_And_Answer["Q2"] %> </h3>
+<h3> Q3 = <%= @Question_And_Answer["Q3"] %> </h3>
